--- a/stylesheets/pages/template.css
+++ b/stylesheets/pages/template.css
@@ -40,7 +40,9 @@
 .navigation__inner {
   width:540px;
   height:500px;
-  position:relative;
+  position:absolute;
+  background-color: white;
+  z-index: 1;
   box-shadow: 0px 1px 7px 1px gray;
   left:450px;
 }
